# panel

./: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.cpp
main/bsp/: bsp.cpp
main/bsp/include/: bsp.h
main/comm/: comm.cpp  tcp_client.cpp  tcp_data_handle.cpp
main/comm/include/: comm.h  tcp_client.h  tcp_data_handle.h
main/config/: app_cfg.h  hwdef.h  taskdef.h
main/driver/: ch422g.cpp  gt911.cpp  ioexpand.cpp  sd_card.cpp  touch.cpp
main/driver/include/: ch422g.h  gt911.h  ioexpand.h  sd_card.h  touch.h
main/gui/: file_explorer.cpp  gui.cpp  lv_port_disp.cpp
main/gui/include/: file_explorer.h  gui.h  lv_port_disp.h
main/misc/: cmds.cpp
main/misc/include/: cmds.h
